--- a/src/gui4/windows/kDrive client/kDrive client/CustomControls/UpdateAvailableBar.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/CustomControls/UpdateAvailableBar.xaml
@@ -36,7 +36,7 @@
 
             <TextBlock x:Uid="CC_UpdateAvailableBar_message"
                        VerticalAlignment="Center"
-                       Style="{StaticResource BodyTextBlockStyle}"
+                       Style="{StaticResource Infomaniak.Style.TextBlock.Body}"
                        Grid.Column="1" />
 
             <HyperlinkButton x:Uid="CC_UpdateAvailableBar_link"
