--- a/src/gui4/windows/kDrive client/kDrive client/Styles/InfomaniakStyles.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Styles/InfomaniakStyles.xaml
@@ -19,86 +19,165 @@
 
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="TextBlockStyle"
+
+    <!-- Standard values -->
+    <!-- FontFamily -->
+    <FontFamily x:Key="Infomaniak.Style.FontFamily.Default">Segoe UI</FontFamily>
+
+    <!-- Font Sizes -->
+    <x:Double x:Key="Infomaniak.Style.FontSize.TitleLarge">40</x:Double>
+    <x:Double x:Key="Infomaniak.Style.FontSize.Title">28</x:Double>
+    <x:Double x:Key="Infomaniak.Style.FontSize.Subtitle">20</x:Double>
+    <x:Double x:Key="Infomaniak.Style.FontSize.Body">14</x:Double>
+    <x:Double x:Key="Infomaniak.Style.FontSize.Caption">12</x:Double>
+
+    <!-- Font Weights -->
+    <FontWeight x:Key="Infomaniak.Style.FontWeight.Light">Light</FontWeight>
+    <FontWeight x:Key="Infomaniak.Style.FontWeight.Normal">Normal</FontWeight>
+    <FontWeight x:Key="Infomaniak.Style.FontWeight.SemiBold">SemiBold</FontWeight>
+    <FontWeight x:Key="Infomaniak.Style.FontWeight.Bold">Bold</FontWeight>
+    <FontWeight x:Key="Infomaniak.Style.FontWeight.ExtraBold">ExtraBold</FontWeight>
+
+    <!-- Colors -->
+    <!-- Brand Colors -->
+    <Color x:Key="Infomaniak.Style.Color.Brand.Default">#0098FF</Color>
+    <Color x:Key="Infomaniak.Style.Color.Brand.Dark">#006AB2</Color>
+    <Color x:Key="Infomaniak.Style.Color.Brand.Light">#4CB7FF</Color>
+    <!-- Product Colors -->
+    <Color x:Key="Infomaniak.Style.Color.Product.Default">#5C89F7</Color>
+    <Color x:Key="Infomaniak.Style.Color.Product.Dark">#345AC1</Color>
+    <Color x:Key="Infomaniak.Style.Color.Product.Light">#84A9F9</Color>
+
+    <!-- Spacing -->
+    <x:Double x:Key="Infomaniak.Style.Spacing.XXS">4</x:Double>
+    <x:Double x:Key="Infomaniak.Style.Spacing.XS">8</x:Double>
+    <x:Double x:Key="Infomaniak.Style.Spacing.S">12</x:Double>
+    <x:Double x:Key="Infomaniak.Style.Spacing.M">16</x:Double>
+    <x:Double x:Key="Infomaniak.Style.Spacing.L">24</x:Double>
+    <x:Double x:Key="Infomaniak.Style.Spacing.XL">32</x:Double>
+    <x:Double x:Key="Infomaniak.Style.Spacing.XXL">36</x:Double>
+    <x:Double x:Key="Infomaniak.Style.Spacing.XXXL">48</x:Double>
+
+    <!-- Thickness -->
+    <Thickness x:Key="Infomaniak.Style.Thickness.Uniform.XXS">4</Thickness>
+    <Thickness x:Key="Infomaniak.Style.Thickness.Uniform.XS">8</Thickness>
+    <Thickness x:Key="Infomaniak.Style.Thickness.Uniform.S">12</Thickness>
+    <Thickness x:Key="Infomaniak.Style.Thickness.Uniform.M">16</Thickness>
+    <Thickness x:Key="Infomaniak.Style.Thickness.Uniform.L">24</Thickness>
+    <Thickness x:Key="Infomaniak.Style.Thickness.Uniform.XL">32</Thickness>
+    <Thickness x:Key="Infomaniak.Style.Thickness.Uniform.XXL">36</Thickness>
+
+    <Thickness x:Key="Infomaniak.Style.Thickness.Top.XXS">0,4,0,0</Thickness>
+    <Thickness x:Key="Infomaniak.Style.Thickness.Top.XS">0,8,0,0</Thickness>
+    <Thickness x:Key="Infomaniak.Style.Thickness.Top.S">0,12,0,0</Thickness>
+    <Thickness x:Key="Infomaniak.Style.Thickness.Top.M">0,16,0,0</Thickness>
+    <Thickness x:Key="Infomaniak.Style.Thickness.Top.L">0,24,0,0</Thickness>
+
+    <Thickness x:Key="Infomaniak.Style.Thickness.Left.XS">8,0,0,0</Thickness>
+    <Thickness x:Key="Infomaniak.Style.Thickness.Left.S">12,0,0,0</Thickness>
+    <Thickness x:Key="Infomaniak.Style.Thickness.Left.M">16,0,0,0</Thickness>
+
+    <!-- Corner Radius -->
+    <CornerRadius x:Key="Infomaniak.Style.CornerRadius.S">4</CornerRadius>
+    <CornerRadius x:Key="Infomaniak.Style.CornerRadius.M">8</CornerRadius>
+
+    <!-- Elements styles -->
+    <!-- TextBlock -->
+    <Style x:Key="Infomaniak.Style.TextBlock.Base"
            TargetType="TextBlock">
         <Setter Property="FontFamily"
-                Value="Segoe UI" />
+                Value="{StaticResource Infomaniak.Style.FontFamily.Default}" />
+    </Style>
+
+    <Style x:Key="Infomaniak.Style.TextBlock.Title"
+           TargetType="TextBlock"
+           BasedOn="{StaticResource Infomaniak.Style.TextBlock.Base}">
         <Setter Property="FontWeight"
-                Value="Normal" />
+                Value="{StaticResource Infomaniak.Style.FontWeight.SemiBold}" />
+        <Setter Property="FontSize"
+                Value="{StaticResource Infomaniak.Style.FontSize.Title}" />
+    </Style>
+    <Style x:Key="Infomaniak.Style.TextBlock.Subtitle"
+           TargetType="TextBlock"
+           BasedOn="{StaticResource Infomaniak.Style.TextBlock.Base}">
+        <Setter Property="FontWeight"
+                Value="{StaticResource Infomaniak.Style.FontWeight.SemiBold}" />
+        <Setter Property="FontSize"
+                Value="{StaticResource Infomaniak.Style.FontSize.Subtitle}" />
+    </Style>
+    <Style x:Key="Infomaniak.Style.TextBlock.BodyStrong"
+           TargetType="TextBlock"
+           BasedOn="{StaticResource Infomaniak.Style.TextBlock.Base}">
+        <Setter Property="FontWeight"
+                Value="{StaticResource Infomaniak.Style.FontWeight.SemiBold}" />
+        <Setter Property="FontSize"
+                Value="{StaticResource Infomaniak.Style.FontSize.Body}" />
+    </Style>
+    <Style x:Key="Infomaniak.Style.TextBlock.BodySb"
+           TargetType="TextBlock"
+           BasedOn="{StaticResource Infomaniak.Style.TextBlock.Base}">
+        <Setter Property="FontWeight"
+                Value="{StaticResource Infomaniak.Style.FontWeight.SemiBold}" />
+        <Setter Property="FontSize"
+                Value="{StaticResource Infomaniak.Style.FontSize.Body}" />
+    </Style>
+    <Style x:Key="Infomaniak.Style.TextBlock.Body"
+           TargetType="TextBlock"
+           BasedOn="{StaticResource Infomaniak.Style.TextBlock.Base}">
+        <Setter Property="FontWeight"
+                Value="{StaticResource Infomaniak.Style.FontWeight.Normal}" />
         <Setter Property="FontSize"
                 Value="14" />
     </Style>
-    <Style x:Key="BodyTextBlockStyle"
-           TargetType="TextBlock">
-        <Setter Property="FontFamily"
-                Value="Segoe UI" />
+    <Style x:Key="Infomaniak.Style.TextBlock.CaptionStrong"
+           TargetType="TextBlock"
+           BasedOn="{StaticResource Infomaniak.Style.TextBlock.Base}">
         <Setter Property="FontWeight"
-                Value="SemiBold" />
+                Value="{StaticResource Infomaniak.Style.FontWeight.SemiBold}" />
         <Setter Property="FontSize"
-                Value="14" />
+                Value="{StaticResource Infomaniak.Style.FontSize.Caption}" />
     </Style>
-    <Style x:Key="BodyStrongTextBlockStyle"
-           TargetType="TextBlock">
-        <Setter Property="FontFamily"
-                Value="Segoe UI" />
+    <Style x:Key="Infomaniak.Style.TextBlock.Caption"
+           TargetType="TextBlock"
+           BasedOn="{StaticResource Infomaniak.Style.TextBlock.Base}">
         <Setter Property="FontWeight"
-                Value="SemiBold" />
+                Value="{StaticResource Infomaniak.Style.FontWeight.Normal}" />
         <Setter Property="FontSize"
-                Value="18" />
+                Value="{StaticResource Infomaniak.Style.FontSize.Caption}" />
     </Style>
-    <Style x:Key="HeaderTextBlockStyle"
-           TargetType="TextBlock">
-        <Setter Property="FontFamily"
-                Value="Segoe UI" />
-        <Setter Property="FontWeight"
-                Value="SemiBold" />
-        <Setter Property="FontSize"
-                Value="20" />
-    </Style>
-    <Style x:Key="CaptionSemiBoldTextBlockStyle"
-           TargetType="TextBlock">
-        <Setter Property="FontFamily"
-                Value="Segoe UI" />
-        <Setter Property="FontWeight"
-                Value="SemiBold" />
-        <Setter Property="FontSize"
-                Value="12" />
-    </Style>
-    <Style x:Key="CaptionTextBlockStyle"
-           TargetType="TextBlock">
-        <Setter Property="FontFamily"
-                Value="Segoe UI" />
-        <Setter Property="FontWeight"
-                Value="Normal" />
-        <Setter Property="FontSize"
-                Value="12" />
-    </Style>
-    <Style x:Key="Infomaniak.Style.Button.WithBackground"
+
+    <!-- Button -->
+    <Style x:Key="Infomaniak.Style.Button.Base"
            TargetType="Button">
+        <Setter Property="CornerRadius"
+                Value="{StaticResource Infomaniak.Style.CornerRadius.S}" />
+        <Setter Property="Padding"
+                Value="12,5,12,7" />
+        <Setter Property="MinWidth"
+                Value="120" />
+    </Style>
+
+    <Style x:Key="Infomaniak.Style.Button.WithBackground"
+           TargetType="Button"
+           BasedOn="{StaticResource Infomaniak.Style.Button.Base}">
         <Setter Property="Background"
                 Value="#1F63FF" />
         <Setter Property="Foreground"
                 Value="White" />
-        <Setter Property="CornerRadius"
-                Value="5" />
-        <Setter Property="Padding"
-                Value="7,6,7,6" />
     </Style>
     <Style x:Key="Infomaniak.Style.Button.WithoutBackground"
-           TargetType="Button">
+           TargetType="Button"
+           BasedOn="{StaticResource Infomaniak.Style.Button.Base}">
         <Setter Property="Background"
                 Value="Transparent" />
         <Setter Property="Foreground"
                 Value="#1F63FF" />
         <Setter Property="BorderBrush"
                 Value="Transparent" />
-        <Setter Property="CornerRadius"
-                Value="5" />
-        <Setter Property="Padding"
-                Value="7,6,7,6" />
     </Style>
     <Style x:Key="Infomaniak.Style.Button.Secondary"
-           TargetType="Button">
+           TargetType="Button"
+           BasedOn="{StaticResource Infomaniak.Style.Button.Base}">
         <Setter Property="Background"
                 Value="Transparent" />
         <Setter Property="Foreground"
@@ -107,9 +186,26 @@
                 Value="#1F63FF" />
         <Setter Property="BorderThickness"
                 Value="1" />
-        <Setter Property="CornerRadius"
-                Value="5" />
+    </Style>
+
+    <!-- Icons -->
+    <Style x:Key="Infomaniak.Style.Icon.Size.S"
+           TargetType="Image">
+        <Setter Property="Width"
+                Value="16" />
+        <Setter Property="Height"
+                Value="16" />
+    </Style>
+
+    <Style x:Key="Infomaniak.Style.Border.WithContent"
+           TargetType="Border">
         <Setter Property="Padding"
-                Value="7,6,7,6" />
+                Value="12,8" />
+        <Setter Property="BorderThickness"
+                Value="1" />
+        <Setter Property="CornerRadius"
+                Value="{StaticResource Infomaniak.Style.CornerRadius.M}" />
+        <Setter Property="BorderBrush"
+                Value="{ThemeResource ButtonDisabledBorderThemeBrush}" />
     </Style>
 </ResourceDictionary>
