--- a/src/gui4/windows/kDrive client/kDrive client/Styles/InfomaniakStyles.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Styles/InfomaniakStyles.xaml
@@ -67,6 +67,8 @@
     <Thickness x:Key="Infomaniak.Style.Thickness.Uniform.XL">32</Thickness>
     <Thickness x:Key="Infomaniak.Style.Thickness.Uniform.XXL">36</Thickness>
 
+    <Thickness x:Key="Infomaniak.Style.Thickness.Sides.Horizontal.M">16,0</Thickness>
+
     <Thickness x:Key="Infomaniak.Style.Thickness.Top.XXS">0,4,0,0</Thickness>
     <Thickness x:Key="Infomaniak.Style.Thickness.Top.XS">0,8,0,0</Thickness>
     <Thickness x:Key="Infomaniak.Style.Thickness.Top.S">0,12,0,0</Thickness>
