Fix(winui3): Remove duplicated border in KsuitUpgradeBar

--- a/src/gui4/windows/kDrive client/kDrive client/CustomControls/KSuiteUpgradeBar.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/CustomControls/KSuiteUpgradeBar.xaml
@@ -8,23 +8,8 @@
              mc:Ignorable="d">
     <Grid Height="58"
           HorizontalAlignment="Stretch">
-        <!-- Layer 1: Gradient Border -->
+        <!-- Layer 1: Gradient background -->
         <Border CornerRadius="{StaticResource Infomaniak.Style.CornerRadius.M}">
-            <Border.BorderBrush>
-                <LinearGradientBrush StartPoint="0,0"
-                                     EndPoint="1,0">
-                    <GradientStop Color="#1DDDFD"
-                                  Offset="0.0" />
-                    <GradientStop Color="#337CFF"
-                                  Offset="0.25" />
-                    <GradientStop Color="#A055FC"
-                                  Offset="0.5" />
-                    <GradientStop Color="#F34BBB"
-                                  Offset="0.75" />
-                    <GradientStop Color="#FDBC3D"
-                                  Offset="1.0" />
-                </LinearGradientBrush>
-            </Border.BorderBrush>
             <Border.Background>
                 <LinearGradientBrush StartPoint="0,0"
                                      EndPoint="1,0">
