feat(WinUI3): add storage page and update styles
- Updated MainWindow to navigate to a new StoragePage.
- Changed default font to "Segoe UI Variable" for better typography.
- Added new styles and thickness resources in InfomaniakStyles.
- Introduced MultiValueProgressBar control and its converter.
- Created StoragePage layout to display storage information.

--- a/src/gui4/windows/kDrive client/kDrive client/MainWindow.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/MainWindow.xaml
@@ -138,9 +138,8 @@
                     </NavigationViewItem.InfoBadge>
                 </NavigationViewItem>
                 <NavigationViewItem x:Uid="W_MainWindow_NavBar_Storage"
-                                    Tag="SamplePage3"
-                                    MinHeight="30"
-                                    IsEnabled="False">
+                                    Tag="StoragePage"
+                                    MinHeight="30">
                     <NavigationViewItem.Icon>
                         <SymbolIcon Symbol="MapDrive" />
                     </NavigationViewItem.Icon>
